Bug 106206 - Exported PDF with a single image shows empty page
Summary: Exported PDF with a single image shows empty page
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-02-27 02:04 UTC by Aron Budea
Modified: 2017-02-27 19:28 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Document with single image (72.89 KB, application/vnd.oasis.opendocument.text)
2017-02-27 02:04 UTC, Aron Budea
Details
Exported PDF (empty) (65.11 KB, application/pdf)
2017-02-27 02:06 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2017-02-27 02:04:27 UTC
Created attachment 131494 [details]
Document with single image

I created an ODT file with a single JPG image based on the description from bug 105954 (see attached). Exporting the document to PDF with results in an empty page.

Settings:
- JPEG compression, 90%
- Reduce image resolution, 300 DPI

This is a regression from the commit referenced below. Adding Cc: to Miklos Vajna, please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=78e25558e86188314b9b72048b8ddca18697cb86
author		Miklos Vajna <vmiklos@collabora.co.uk>	2017-02-23 15:35:15 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2017-02-23 15:36:18 (GMT)

"tdf#106059 PDF export: create a reference XObject for JPG images with PDF data"
Comment 1 Aron Budea 2017-02-27 02:06:32 UTC
Created attachment 131495 [details]
Exported PDF (empty)
Comment 2 Jacques Guilleron 2017-02-27 06:54:19 UTC
Hi Aron,

I don't reproduce with
LO 5.4.0.0.alpha0+ Build ID: f0c7cbe1d8505d3c1f5a2b2253efda35542c898b
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-02-22_04:35:00
Locale: fr-FR (fr_FR); Calc: CL

nor with
LO 5.4.0.0.alpha0+ Build ID: 789ed159fb03eef26c991f361380d0eb7b509cd9
CPU Threads: 2; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-02-03_01:06:06
Locale: en-US (fr_FR); Calc: CL

Jacques
Comment 3 Xisco Faulí 2017-02-27 08:56:35 UTC
Confirmed in

Version: 5.4.0.0.alpha0+
Build ID: eb7b03b052ffe8c2c577b2349987653db6c53f76
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2017-02-26_22:34:18
Locale: en-GB (es_ES); Calc: group
Comment 4 Miklos Vajna 2017-02-27 11:22:25 UTC
I can reproduce the problem, will look into it.
Comment 5 Commit Notification 2017-02-27 18:02:21 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e7adffff8039175bc50b56b4c07ce0b9d8fed629

tdf#106206 PDF export: fix unexpected /Im0 in page contents stream

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.