tdf#106206 PDF export: fix unexpected /Im0 in page contents stream

The early return should just skip the code that's specific to pdf
images, not everything.

Change-Id: Ia9e02b05051a085a9fdf2f690c21f9ffccb7bf4d